--- a/style.css
+++ b/style.css
@@ -195,20 +195,96 @@
 
 
 /*--------Extra Animation code -----------------*/
+/*------------Bottom Section------*/
 
 
 
 
 
 
-.s2 {
-  background: linear-gradient(to left top, rgb(189, 193, 199), white);
+
+
+/*These styles contain basic styles for fomatting along with our animation css*/
+
+
+
+
+
+.container-animator *,
+.container-animator *:before,
+.container-animator *:after {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
-.s2 h3 {
-  font-size: 48px;
-  background: linear-gradient(to left, #404042, #373838);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+/*clearfixes*/
+
+.cf:before,
+.cf:after {
+  content: " ";
+  display: table;
+}
+
+.cf:after {
+  clear: both;
+}
+
+
+
+
+/*animation element*/
+
+.animation-element {
+  opacity: 0;
+  position: relative;
+}
+/*animation element sliding left*/
+
+.animation-element.slide-left {
+  opacity: 0;
+  -moz-transition: all 500ms linear;
+  -webkit-transition: all 500ms linear;
+  -o-transition: all 500ms linear;
+  transition: all 500ms linear;
+  -moz-transform: translate3d(-100px, 0px, 0px);
+  -webkit-transform: translate3d(-100px, 0px, 0px);
+  -o-transform: translate(-100px, 0px);
+  -ms-transform: translate(-100px, 0px);
+  transform: translate3d(-100px, 0px, 0px);
+}
+
+.animation-element.slide-left.in-view {
+  opacity: 1;
+  -moz-transform: translate3d(0px, 0px, 0px);
+  -webkit-transform: translate3d(0px, 0px, 0px);
+  -o-transform: translate(0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  transform: translate3d(0px, 0px, 0px);
+}
+/*animation slide left styled for testimonials*/
+
+.animation-element.slide-left.testimonial {
+  float: left;
+  width: 47%;
+  margin: 0% 1.5% 3% 1.5%;
+  background: #F5F5F5;
+  padding: 15px;
+box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.2);
+  border: solid 1px #EAEAEA;
+}
+.animation-element.slide-left.testimonial:hover,
+.animation-element.slide-left.testimonial:active{
+  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.25);
+}
+
+.animation-element.slide-left.testimonial:nth-of-type(odd) {
+  width: 48.5%;
+  margin: 0% 1.5% 3.0% 0%;
+}
+
+.animation-element.slide-left.testimonial:nth-of-type(even) {
+  width: 48.5%;
+  margin: 0% 0% 3.0% 1.5%;
 }
 
 
@@ -218,7 +294,16 @@
 
 
 
-/*-----------------------*/
+
+
+
+
+
+
+
+
+
+/*---------------------End------------------*/
 
 
 
@@ -443,9 +528,7 @@ cursor: pointer;
 /* .detail-services  i{
   transition: width 2s, height 4s;
 } */
- .detail-services i:hover{
- font-size: 50px !important;
-}
+
 
 
 
